Fix icon button alignment and disabled states

--- a/src/ids-color-picker/ids-color-picker.scss
+++ b/src/ids-color-picker/ids-color-picker.scss
@@ -17,8 +17,9 @@ ids-input::part(input) {
 }
 
 .color-picker-trigger-btn::part(button) {
+  @include mx-8();
+
   position: relative;
-  margin-left: 0;
   z-index: 2;
 }
 
